# aislopfixer

./: .gitignore  .npmignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  fp_test.mjs  package.json  pyproject.toml
docs/superpowers/specs/: 2026-06-13-aislopfixer-design.md
sample/: about.html  index.html
sample/components/: Hero.jsx  UserCard.jsx
scripts/: clean.mjs
src/aislopfixer/: __init__.py  __main__.py  allowlist.py  app.py  cli.py  fixer.py  scanner.py  store.py  styles.tcss  theme.py
src/aislopfixer/engine/: __init__.py  context.py  models.py  pattern_rule.py  registry.py  runner.py  scoring.py  util.py
src/aislopfixer/engine/rules/: __init__.py  accessibility.py  ai_leaks.py  buzzwords.py  codegen.py  duplicates.py  markdown_tells.py  placeholders.py  prose_tells.py
src/aislopfixer/screens/: __init__.py  base.py  modal.py  path.py  results.py  scan.py  splash.py  summary.py
src/aislopfixer/widgets/: __init__.py  animations.py  counters.py  guard.py  logo.py  stats.py
tests/: test_allowlist.py  test_codegen_prose_md.py  test_fixer.py  test_rules.py  test_scanner.py  test_scoring.py  test_smart.py  test_store.py  test_tui.py
