[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aislopfixer"
version = "0.1.1"
description = "Terminal TUI that finds and fixes AI-generated slop in local web projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["textual>=0.80"]

[project.scripts]
aislopfixer = "aislopfixer.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aislopfixer = ["*.tcss"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
